--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
-cycler==0.11.0
-fonttools==4.30.0
-future==0.18.2
-joblib==1.1.0
-kiwisolver==1.3.2
-matplotlib==3.5.1
-numpy==1.22.3
-opencv-python==4.5.5.64
-packaging==21.3
-Pillow==9.0.1
-pyparsing==3.0.7
-python-dateutil==2.8.2
-scikit-learn==1.0.2
-scipy==1.8.0
-six==1.16.0
-threadpoolctl==3.1.0
-tkintertable==1.3.3
+certifi==2020.12.5
+chardet==4.0.0
+cycler==0.10.0
+docutils==0.16
+idna==2.10
+imageio==2.9.0
+Kivy==2.1.0
+kivy-deps.angle==0.3.2
+kivy-deps.glew==0.3.0
+kivy-deps.sdl2==0.3.1
+Kivy-Garden==0.1.4
+kiwisolver==1.3.1
+matplotlib==3.3.4
+numpy==1.20.1
+opencv-python==4.5.1.48
+Pillow==8.1.2
+Pygments==2.8.1
+pyparsing==2.4.7
+pypiwin32==223
+python-dateutil==2.8.1
+pywin32==300
+requests==2.25.1
+six==1.15.0
+urllib3==1.26.4
